--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
 <h2>Homepage</h2>
+<nav>
+    <ul>
+        <li><a href="/auth/signup">Sign Up</a></li>
+        <li><a href="/auth/login">Log In</a></li>
+    </ul>
+</nav>
