--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,14 +9,17 @@
 
   </head>
   <body>
+    <%- include('partials/alerts') %>
     <header>
-      <%- include('partials/alerts') %>
       <nav>
         <ul>
-          <li><a href="/auth/signup">Signup</a></li>
-          <li><a href="/auth/login">Login</a></li>
-          <li><a href="/auth/logout">Logout</a></li>
-          <li><a href="/profile">Profile</a></li>
+          <% if (!currentUser) { %> 
+            <li><a href="/auth/signup">Signup</a></li>
+            <li><a href="/auth/login">Login</a></li>
+          <%} else { %> 
+            <li><a href="/auth/logout">Log Out</a></li>
+            <li><a href="/profile">Profile</a></li>
+          <% } %> 
         </ul>
       </nav>
     </header>
