--- a/views/partials/alerts.ejs
+++ b/views/partials/alerts.ejs
@@ -2,8 +2,10 @@
     <% alerts.error.forEach(msg => { %>
     <div class="alert alert-danger"><%= msg %> </div>   
     <% }) %>
+<% } %>
 
 <% if(alerts.success) {%> 
-    <% alerts.error.forEach(msg =>{ %>
-        <div class="alert alert-anger><% msg %> "
+    <% alerts.success.forEach(msg =>{ %>
+        <div class="alert alert-anger"><%= msg %> </div>
     <% }) %> 
+<% } %>
