--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,6 @@
 <h2>Profile Page</h2>
 
-<h3>Welcome to your PROFILE</h3>
+<h3>Welcome <%= name %> , to your PROFILE</h3>
+<p>Id: <%= id %> </p>
+<p><%= name %> </p>
+<p><%= email %> </p>
