Completed product. Fixed EJS bootstrap issue

--- a/views/partials/alerts.ejs
+++ b/views/partials/alerts.ejs
@@ -6,6 +6,6 @@
 
 <% if(alerts.success) {%> 
     <% alerts.success.forEach(msg =>{ %>
-        <div class="alert alert-anger"><%= msg %> </div>
+        <div class="alert alert-success"><%= msg %> </div>
     <% }) %> 
 <% } %>
